Data explorer buttons, select, text, title, map pop up. The arrow down for the map pop up is styled, but it looks like it's going to be a lot of work to have it in the same place as the design - aligning it to the left isn't hard, but having the entire box pop up in the correct position is not obvious to me. Removing map.css line 46 returns it to normal

--- a/website/website/static/css/map.css
+++ b/website/website/static/css/map.css
@@ -1,4 +1,4 @@
-#map { 
+#map {
 }
 
 .map-height {
@@ -31,4 +31,26 @@
 }
 
 
+.leaflet-popup-content-wrapper {
+	border-radius: 4px;
+}
 
+.leaflet-popup-content p {
+	margin-top: 8px;
+}
+
+.leaflet-popup-tip-container {
+	height: 30px;
+}
+
+.leaflet-popup-tip {
+	width: 0;
+  height: 0;
+  border-top: 27px solid white;
+  border-right: 15px solid transparent;
+	background: none;
+	transform: none;
+	margin: 0 auto;
+	box-shadow: none;
+	filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.4));
+}
